objects/APTS_Variables_by_Product__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Variables by Product</relationshipLabel>
        <relationshipName>Variables_by_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_GM_Rounding__c</fullName>
        <label>GM Rounding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Rounding__c</fullName>
        <label>Price Rounding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Variables by Product</relationshipLabel>
        <relationshipName>Variables_by_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Hit_Rate__c</fullName>
        <label>Threshold Hit Rate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Variables by Product</label>
    <nameField>
        <displayFormat>VBP-{00000}</displayFormat>
        <label>Variables by Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variables by Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>